ja/9.0/admin/scheduledJob-guide.rst
============
ジョブの設定
============

概要
====

ここでは、ジョブに関する設定について説明します。

設定方法
========

表示方法
--------

管理者アカウントでログイン後、メニューのジョブ管理をクリックします。

|image0|

|image1|

設定項目
========

名前
----

一覧で表示される名前です。

対象
----

対象はジョブをバッチ等で直接コマンド実行するときに実行するかどうかの識別子として利用することができます。クロールをコマンド実行などしない場合は、「all」を指定してください。

スケジュール
------------

スケジュールの設定を行います。ここで設定したスケジュールでスクリプトで記述したジョブが実行されます。

記述形式はCronのような「秒 分 時 日 月 曜日
年(省略可)」の形式で記述します。たとえば、「0 0 12 ? \*
WED」の場合は、毎週水曜日の12:00pmにジョブを実行します。より細かい指定方法については「\ `Quartz <http://quartz-scheduler.org/documentation/quartz-2.2.x/tutorials/tutorial-lesson-06>`__\ 」を参照してください。

実行方法
--------

スクリプトの実行環境を指定します。現時点では「groovy」だけをサポートしています。

スクリプト
----------

ジョブの実行内容を実行方法で指定した言語で記述します。

ログ
----

有効にすることでジョブログへ記録されます。

クロールジョブ
--------------

有効にすることでクロールジョブとして扱われます。「システムの設定」でクロールの起動・停止対象となります。

状態
----

ジョブの有効・無効の状態を指定します。無効にした場合はジョブは実行されません。

ソート
------

ジョブ一覧での表示順を指定します。

.. |image0| image:: ../../../resources/images/ja/9.0/admin/scheduledJob-1.png
.. |image1| image:: ../../../resources/images/ja/9.0/admin/scheduledJob-2.png
